@@ -7,6 +7,7 @@ import java.awt.Stroke;
 import java.awt.geom.AffineTransform;
 
 import edu.colorado.phet.common.phetcommon.model.Resettable;
+import edu.colorado.phet.common.phetcommon.util.function.VoidFunction1;
 import edu.colorado.phet.common.phetcommon.view.controls.PropertyRadioButton;
 import edu.colorado.phet.common.phetcommon.view.util.PhetFont;
 import edu.colorado.phet.common.piccolophet.nodes.ResetAllButtonNode;
@@ -14,6 +15,7 @@ import edu.colorado.phet.common.piccolophet.nodes.layout.HBox;
 import edu.colorado.phet.fractionsintro.buildafraction.model.BuildAFractionModel;
 import edu.colorado.phet.fractionsintro.buildafraction.model.Scene;
 import edu.colorado.phet.fractionsintro.common.view.AbstractFractionsCanvas;
+import edu.umd.cs.piccolo.PNode;
 import edu.umd.cs.piccolox.pswing.PSwing;
 
 /**
@@ -24,25 +26,36 @@ import edu.umd.cs.piccolox.pswing.PSwing;
 public class BuildAFractionCanvas extends AbstractFractionsCanvas implements NumberSceneContext {
     public static final Paint TRANSPARENT = new Color( 0, 0, 0, 0 );
     public static final Stroke controlPanelStroke = new BasicStroke( 2 );
+
+    //Layer that is panned over vertically to switch between numbers and pictures.
+    //Couldn't use camera for this since it is difficult to make camera objects scale up and down with the canvas but not translate with the screens
+    private final PNode sceneLayer = new PNode();
     private final SceneNode numberScene = new SceneNode();
     private final SceneNode pictureScene = new SceneNode();
     private final BuildAFractionModel model;
+    private boolean inited = false;
 
     public BuildAFractionCanvas( final BuildAFractionModel model ) {
         this.model = model;
+        addChild( sceneLayer );
+        pictureScene.addChild( new NumberSceneNode( model.level.get(), rootNode, model, STAGE_SIZE, this ) );
         numberScene.addChild( new NumberSceneNode( model.level.get(), rootNode, model, STAGE_SIZE, this ) {{
-//            setOffset( 0, STAGE_SIZE.height );
+            setOffset( 0, STAGE_SIZE.height );
         }} );
-//        pictureScene.addChild( new NumberSceneNode( model.level.get(), rootNode, model, STAGE_SIZE, this ) );
-        addChild( numberScene );
-//        addChild( pictureScene );
-//        addChild( new VisibilityNode( model.selectedScene.valueEquals( Scene.numbers ), numberScene ) );
+        sceneLayer.addChild( numberScene );
+        sceneLayer.addChild( pictureScene );
 
+        //Add reset button to a layer that won't pan
         addChild( new ResetAllButtonNode( new Resettable() {
             public void reset() {
                 model.resetAll();
                 numberScene.reset();
-                numberScene.addChild( new NumberSceneNode( model.level.get(), rootNode, model, STAGE_SIZE, BuildAFractionCanvas.this ) );
+                numberScene.addChild( new NumberSceneNode( model.level.get(), rootNode, model, STAGE_SIZE, BuildAFractionCanvas.this ) {{
+                    setOffset( 0, STAGE_SIZE.height );
+                }} );
+                pictureScene.reset();
+                pictureScene.addChild( new NumberSceneNode( model.level.get(), rootNode, model, STAGE_SIZE, BuildAFractionCanvas.this ) );
+
             }
         }, this, 18, Color.black, Color.orange ) {{
             setOffset( STAGE_SIZE.getWidth() - getFullBounds().getWidth() - INSET, STAGE_SIZE.getHeight() - getFullBounds().getHeight() - INSET );
@@ -51,22 +64,21 @@ public class BuildAFractionCanvas extends AbstractFractionsCanvas implements Num
         addChild( new HBox( new PSwing( radioButton( model, "Pictures", Scene.pictures ) ),
                             new PSwing( radioButton( model, "Numbers", Scene.numbers ) ) ) );
 
-//        model.selectedScene.addObserver( new VoidFunction1<Scene>() {
-//            public void apply( final Scene scene ) {
-//                if ( scene == Scene.pictures ) {
-//                    numberScene.animateToTransparency( 0.0f, 1000 );
-//                    pictureScene.animateToTransparency( 1f, 1000 );
-//                    numberScene.animateToPositionScaleRotation( 0, STAGE_SIZE.getHeight(), 1, 0, 1000 );
-//                    pictureScene.animateToPositionScaleRotation( 0, 0, 1, 0, 1000 );
-//                }
-//                else if ( scene == Scene.numbers ) {
-//                    numberScene.animateToTransparency( 1.0f, 1000 );
-//                    pictureScene.animateToTransparency( 0.0f, 1000 );
-//                    numberScene.animateToPositionScaleRotation( 0, 0, 1, 0, 1000 );
-//                    pictureScene.animateToPositionScaleRotation( 0, -STAGE_SIZE.height, 1, 0, 1000 );
-//                }
-//            }
-//        } );
+        model.selectedScene.addObserver( new VoidFunction1<Scene>() {
+            public void apply( final Scene scene ) {
+                if ( scene == Scene.pictures ) {
+                    numberScene.animateToTransparency( 0.0f, 1000 );
+                    pictureScene.animateToTransparency( 1f, 1000 );
+                    sceneLayer.animateToPositionScaleRotation( 0, 0, 1, 0, inited ? 1000 : 0 );
+                }
+                else if ( scene == Scene.numbers ) {
+                    numberScene.animateToTransparency( 1.0f, 1000 );
+                    pictureScene.animateToTransparency( 0.0f, 1000 );
+                    sceneLayer.animateToPositionScaleRotation( 0, -STAGE_SIZE.height, 1, 0, inited ? 1000 : 0 );
+                }
+            }
+        } );
+        inited = true;
     }
 
     private PropertyRadioButton<Scene> radioButton( final BuildAFractionModel model, final String text, Scene scene ) {
@@ -79,7 +91,7 @@ public class BuildAFractionCanvas extends AbstractFractionsCanvas implements Num
     public void goToNext() {
         model.nextLevel();
         numberScene.addChild( new NumberSceneNode( model.level.get(), rootNode, model, STAGE_SIZE, this ) {{
-            setOffset( STAGE_SIZE.getWidth() * model.level.get(), 0 );
+            setOffset( STAGE_SIZE.width * model.level.get(), STAGE_SIZE.height );
         }} );
         numberScene.animateToTransform( AffineTransform.getTranslateInstance( -STAGE_SIZE.getWidth() * model.level.get(), 0 ), 1000 );
     }
