@@ -1,3 +1,4 @@
+Added scene layer for navigation
 Build a fraction tab: Added radio buttons for changing game types, not wired up yet
 # 0.00.78 (64716) Jun 6, 2012
 Matching Game Tab: Performance improvements for fraction representations flying back to their containers or to the match containers
